grafana ingress setting

--- a/values/prometheus-values.yaml
+++ b/values/prometheus-values.yaml
@@ -44,6 +44,7 @@ kube-prometheus-stack:
         cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
         - grafana.zgoo.me
+      path: "/"
       tls:
         - hosts:
             - grafana.zgoo.me
