Add all component replicas: 0 for SingleBinary mode (official docs)

--- a/values/loki-values.yaml
+++ b/values/loki-values.yaml
@@ -45,12 +45,30 @@ singleBinary:
     enabled: true
     size: 20Gi
 
-# SimpleScalable 모드 비활성화 (SingleBinary 사용)
+# Zero out replica counts of other deployment modes
+backend:
+  replicas: 0
 read:
   replicas: 0
 write:
   replicas: 0
-backend:
+ingester:
+  replicas: 0
+querier:
+  replicas: 0
+queryFrontend:
+  replicas: 0
+queryScheduler:
+  replicas: 0
+distributor:
+  replicas: 0
+compactor:
+  replicas: 0
+indexGateway:
+  replicas: 0
+bloomCompactor:
+  replicas: 0
+bloomGateway:
   replicas: 0
 
 # Gateway (nginx)
