--- a/argocd/applications/monitoring/loki.yaml
+++ b/argocd/applications/monitoring/loki.yaml
@@ -1,20 +1,22 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus-stack
+  name: loki
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   project: default
 
   sources:
     # Helm Chart
-    - repoURL: https://prometheus-community.github.io/helm-charts
-      chart: kube-prometheus-stack
-      targetRevision: 65.8.1
+    - repoURL: https://grafana.github.io/helm-charts
+      chart: loki
+      targetRevision: 6.23.0
       helm:
-        releaseName: prometheus-stack
+        releaseName: loki
         valueFiles:
-          - $values/values/prometheus-values.yaml
+          - $values/values/loki-values.yaml
 
     # Values 파일 (GitHub SSH - koalakid1 사용)
     - repoURL: git@github.com:koalakid1/zgoome-infra.git
@@ -31,4 +33,3 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - ServerSideApply=true
