Add Grafana Sealed Secret and update values to use existingSecret

--- a/values/prometheus-values.yaml
+++ b/values/prometheus-values.yaml
@@ -23,7 +23,11 @@
   # Grafana 설정 + Ingress
   grafana:
     enabled: true
-    adminPassword: "admin"
+    defaultDashboardsEnabled: false
+    admin:
+      existingSecret: grafana-admin
+      userKey: admin-user
+      passwordKey: admin-password
     persistence:
       enabled: true
       size: 2Gi
