Refactor: Reorganize folder structure and add unified Postgres with Sealed Secrets
- Separate ArgoCD Applications from K8s resources
  - applications/system/: sealed-secrets controller & resource manager
  - resources/secrets/: SealedSecret manifests
  - resources/services/: Common services (postgres bridge)

- Add unified Postgres instance in db namespace
  - Single Postgres with movie & dev_movie databases (initdb)
  - Separate secrets: postgres-helm-secret (db ns), postgres-secret (movie ns)
  - Service bridge for backward compatibility (movie ns → db ns)
  - Backup enabled (daily 2AM, 20Gi PVC)

- Benefits:
  - No Application needed when adding new secrets
  - Movie apps unchanged (still use postgres-service:5432)
  - Resource efficient (one Postgres instance)

--- a/argocd/applications/db/postgres.yaml
+++ b/argocd/applications/db/postgres.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: postgres-dev
+  name: postgres
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "0"
@@ -14,9 +14,9 @@ spec:
       chart: postgresql
       targetRevision: 16.2.1
       helm:
-        releaseName: postgres-dev
+        releaseName: postgres
         valueFiles:
-          - $values/values/postgres-dev-values.yaml
+          - $values/values/postgres-values.yaml
 
     # Values 파일 (GitHub SSH - koalakid1 사용)
     - repoURL: git@github.com:koalakid1/zgoome-infra.git
