Refactor: Reorganize to standard GitOps structure
- Move Kubernetes manifests to root manifests/ folder
  - argocd/resources/ → manifests/
  - Separate ArgoCD config from actual resources

- Simplify secrets management
  - argocd/applications/system/sealed-secrets-resources.yaml
    → argocd/applications/secrets.yaml
  - Single Application manages all secrets in manifests/secrets/

- Remove postgres bridge (will add after data migration)
  - Need to backup & restore data from movie/postgres first
  - Delete manifests/services/postgres-bridge.yaml
  - Delete argocd/applications/system/common-resources.yaml

New structure:
manifests/
└── secrets/           # SealedSecret manifests

argocd/
└── applications/
    ├── secrets.yaml   # Manages manifests/secrets/
    └── system/
        └── sealed-secrets-controller.yaml

--- a/argocd/applications/secrets.yaml
+++ b/argocd/applications/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sealed-secrets-resources
+  name: secrets
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "-1"  # Secret 먼저 배포
@@ -11,9 +11,9 @@ spec:
   source:
     repoURL: git@github.com:koalakid1/zgoome-infra.git
     targetRevision: main
-    path: argocd/resources/secrets
+    path: manifests/secrets
     directory:
-      recurse: false  # 하위 폴더는 검색 안 함
+      recurse: false
 
   destination:
     server: https://kubernetes.default.svc
