Add NodePort access for Postgres (local development)
- Change service type: ClusterIP → NodePort
- NodePort: 31107
- Purpose: Local database access for development

--- a/values/postgres-values.yaml
+++ b/values/postgres-values.yaml
@@ -27,7 +27,9 @@ primary:
 
   # Service 설정
   service:
-    type: ClusterIP
+    type: NodePort
+    nodePorts:
+      postgresql: 31107  # 외부 접근 포트
     ports:
       postgresql: 5432
 
