--- a/values/postgres-values.yaml
+++ b/values/postgres-values.yaml
@@ -27,9 +27,7 @@ primary:
 
   # Service 설정
   service:
-    type: NodePort
-    nodePorts:
-      postgresql: 31107  # 외부 접근 포트
+    type: ClusterIP
     ports:
       postgresql: 5432
 
