--- a/values/postgres-values.yaml
+++ b/values/postgres-values.yaml
@@ -5,7 +5,7 @@
 image:
   registry: docker.io
   repository: bitnami/postgresql
-  tag: 16.6.0-debian-12-r0
+  tag: "16"
 
 auth:
   # Sealed Secret 사용 (db 네임스페이스)
