--- a/values/postgres-values.yaml
+++ b/values/postgres-values.yaml
@@ -1,11 +1,11 @@
 # Bitnami PostgreSQL Helm Chart
 # https://github.com/bitnami/charts/tree/main/bitnami/postgresql
 
-# Image 설정 (ARM64 지원)
+# Image 설정 (공식 PostgreSQL ARM64)
 image:
   registry: docker.io
-  repository: bitnami/postgresql
-  tag: "16"
+  repository: library/postgres
+  tag: "17"
 
 auth:
   # Sealed Secret 사용 (db 네임스페이스)
