Force use official postgres:17 image
- Set image.repository: postgres
- Set image.tag: 17
- Override Bitnami default with official PostgreSQL image
- Better ARM64 support

--- a/values/postgres-values.yaml
+++ b/values/postgres-values.yaml
@@ -1,6 +1,12 @@
 # Bitnami PostgreSQL Helm Chart
 # https://github.com/bitnami/charts/tree/main/bitnami/postgresql
 
+# 공식 PostgreSQL 이미지 사용 (ARM64 지원)
+image:
+  registry: docker.io
+  repository: postgres
+  tag: "17"
+
 auth:
   # Sealed Secret 사용 (db 네임스페이스)
   existingSecret: postgres-helm-secret
