Restore chart version to 16.2.1 with postgres:17 image
- Chart version: 16.2.1 (original)
- Image: postgres:17 (official)
- Best of both worlds

--- a/argocd/applications/db/postgres.yaml
+++ b/argocd/applications/db/postgres.yaml
@@ -12,7 +12,7 @@ spec:
     # Helm Chart
     - repoURL: https://charts.bitnami.com/bitnami
       chart: postgresql
-      targetRevision: 15.5.0  # PostgreSQL 16 with ARM64 support
+      targetRevision: 16.2.1
       helm:
         releaseName: postgres
         valueFiles:
