--- a/values/postgres-values.yaml
+++ b/values/postgres-values.yaml
@@ -1,11 +1,11 @@
 # Bitnami PostgreSQL Helm Chart
 # https://github.com/bitnami/charts/tree/main/bitnami/postgresql
 
-# 공식 PostgreSQL 이미지 사용 (ARM64 지원)
+# PostgreSQL 15 for ARM64 compatibility
 image:
   registry: docker.io
-  repository: postgres
-  tag: "17"
+  repository: bitnami/postgresql
+  tag: "15"
 
 auth:
   # Sealed Secret 사용 (db 네임스페이스)
