Replace Helm PostgreSQL with manifest-based deployment
- Remove Helm chart postgres (bitnami/postgresql)
- Add manifest-based postgres StatefulSet in db namespace
- Remove Traefik TCP IngressRoute for postgres
- Use ClusterIP for internal-only access

Changes:
- Deleted: argocd/applications/db/postgres.yaml (Helm deployment)
- Deleted: values/postgres-values.yaml
- Deleted: manifests/ingress/postgres-tcp.yaml (Traefik TCP)
- Deleted: manifests/secrets/sealed-postgres-helm.yaml
- Added: manifests/db/postgres/statefulset.yaml
- Added: manifests/db/postgres/service.yaml
- Added: manifests/secrets/sealed-postgres-db.yaml

--- a/argocd/applications/db/postgres.yaml
+++ b/argocd/applications/db/postgres.yaml
@@ -1,35 +1,29 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: postgres
+  name: postgres-db
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   project: default
-
-  sources:
-    # Helm Chart
-    - repoURL: https://charts.bitnami.com/bitnami
-      chart: postgresql
-      targetRevision: 16.2.1
-      helm:
-        releaseName: postgres
-        valueFiles:
-          - $values/values/postgres-values.yaml
-
-    # Values 파일 (GitHub SSH - koalakid1 사용)
-    - repoURL: git@github.com:koalakid1/zgoome-infra.git
-      targetRevision: main
-      ref: values
-
+  source:
+    repoURL: https://github.com/koalakid1/zgoome-infra.git
+    targetRevision: main
+    path: manifests/db/postgres
   destination:
     server: https://kubernetes.default.svc
     namespace: db
-
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: false
     syncOptions:
-      - CreateNamespace=true
+    - CreateNamespace=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
