--- a/manifests/db/postgres/service.yaml
+++ b/manifests/db/postgres/service.yaml
@@ -5,10 +5,11 @@ metadata:
   name: postgres
   namespace: db
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 5432
       targetPort: 5432
+      nodePort: 31107
       protocol: TCP
   selector:
     app: postgres
