Add Prometheus datasource to Grafana

--- a/values/prometheus-values.yaml
+++ b/values/prometheus-values.yaml
@@ -53,8 +53,13 @@
             - grafana.zgoo.me
           secretName: grafana-tls
 
-    # Loki 데이터소스 자동 추가
+    # 데이터소스 자동 추가
     additionalDataSources:
+      - name: Prometheus
+        type: prometheus
+        url: http://prometheus-stack-kube-prom-prometheus.monitoring.svc.cluster.local:9090
+        access: proxy
+        isDefault: true
       - name: Loki
         type: loki
         url: http://loki-gateway.monitoring.svc.cluster.local
