--- a/argocd/applications/db/postgres.yaml
+++ b/argocd/applications/db/postgres.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/koalakid1/zgoome-infra.git
+    repoURL: https://github.com/zgoome/zgoome-infra.git
     targetRevision: main
     path: manifests/db/postgres
   destination:
