zgoome repo URL 방식을 SSH에서 HTTPS로 변경

--- a/argocd/applications/ingress.yaml
+++ b/argocd/applications/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
 
   source:
-    repoURL: git@github.com:zgoome/zgoome-infra.git
+    repoURL: https://github.com/zgoome/zgoome-infra.git
     targetRevision: main
     path: manifests/ingress
     directory:
